// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<JobsList /> should render 1`] = `
<div>
  <ViewHeader
    title="Jobs"
    totalCount={5}
  />
  <Connect(JobsToolbar) />
  <ScrollList
    documents={
      Array [
        Object {
          "foo": "bar",
        },
      ]
    }
    onLoadNextPage={[Function]}
    page={2}
    pageCount={3}
    renderRow={[Function]}
  />
</div>
`;

exports[`<JobsList /> should render when [this.props.documents === null] 1`] = `<LoadingPlaceholder />`;

exports[`<JobsList /> should render when [this.props.documents.length === false] 1`] = `
<div>
  <ViewHeader
    title="Jobs"
    totalCount={5}
  />
  <Connect(JobsToolbar) />
  <NoneFound
    noListGroup={true}
    noun="jobs"
  />
  <ScrollList
    documents={Object {}}
    onLoadNextPage={[Function]}
    page={2}
    pageCount={3}
    renderRow={[Function]}
  />
</div>
`;
